@@ -11,6 +11,7 @@ Changed
     Upgrade to bootstrap 5
     Remove operations from sidebar that are complete / failed older than 5 minutes (#407)
     Only admins can create projects (#429)
+    Improve user parameter display on instance events
 
 Fixed
     First run doesn't toggle passwords properly (#390)
